kustomization/components/ripper/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ripper-svc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
  selector:
    app.kubernetes.io/name: ripper
