kustomization/components/ripper/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: ripper-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ripper-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
